# hierarchical-invariants-paper-code

./: .gitignore  AGENTS_photonic_jordan_template.md  CITATION.cff  README.md  jordan_framework_demo.py  jordan_framework_demo_v2.py  mkdocs.yml  photonic_framework_v3_handoff_spec.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docs-pages.yml
docs/: api.md  index.md  performance.md  quickstart.md  references.md  reproducibility.md  theory.md
notebooks/: demo_codespaces.ipynb  demo_colab.ipynb  schur_duality_showcase.ipynb
photonic_jordan/: __init__.py  api.py  core.py  decomposition.py  dynamics.py  specs.py
photonic_jordan/hierarchy/: __init__.py  invariants.py  jordan.py
photonic_jordan/math/: __init__.py  linalg.py
photonic_jordan/measurement/: __init__.py  factory.py  models.py  observable.py
photonic_jordan/schur/: __init__.py  decomposition.py
photonic_jordan/spaces/: __init__.py  fock.py  labeled_tensor.py  symmetry.py
photonic_jordan/state/: __init__.py  builders.py  factory.py  models.py
photonic_jordan/system/: __init__.py  photonic_system.py
tests/: test_fock_backend.py  test_hierarchy_properties.py  test_literature_adamson.py  test_literature_multiport.py  test_measurement.py  test_multiplicity_stability.py  test_phase1_decomposition.py  test_phase2_local_hierarchy.py  test_public_api_docstrings.py  test_schur_cache.py  test_state_first_api.py  test_state_gram_and_physical.py
