[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photonic-jordan-demo"
version = "0.1.0"
description = "Photonic Jordan framework prototype with Schur/multiplicity decomposition and scoped Jordan invariants"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24,<3",
  "scipy>=1.10,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ipykernel>=6.29,<7",
  "jupyterlab>=4.2,<5",
  "nbclient>=0.10,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["photonic_jordan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
