[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linear-optics-toolkit"
version = "0.1.0"
description = "Linear optics toolkit with Schur/multiplicity decomposition, symmetric Fock backend, and scoped hierarchy invariants"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24,<3",
  "scipy>=1.10,<2",
]

[project.urls]
Homepage = "https://github.com/yangbc30/hierarchical-invariants-paper-code"
Documentation = "https://github.com/yangbc30/hierarchical-invariants-paper-code/tree/main/docs"
Repository = "https://github.com/yangbc30/hierarchical-invariants-paper-code"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ipykernel>=6.29,<7",
  "jupyterlab>=4.2,<5",
  "nbclient>=0.10,<1",
  "mkdocs>=1.6,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["photonic_jordan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
